Update package.json with few useful scripts

--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "1.0.0",
   "description": "Hands-on Playwright + AI-Powered Test Automation training — examples, exercises, scripts, and best practices from the global online workshop (Nov 2025).",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:debug": "playwright test --debug",
+    "test:headed": "playwright test --headed",
+    "test:first": "playwright test 01-first-test",
+    "report": "playwright show-report",
+    "codegen": "playwright codegen",
+    "playwright:install": "playwright install",
+    "playwright:update": "npm install -D @playwright/test@latest && playwright install"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pragmatictesters/playwright-advanced-training-2025.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Janesh Kodikara",
   "license": "ISC",
   "type": "commonjs",
   "bugs": {
