Add OrangeHRM basic test

--- a/package.json
+++ b/package.json
@@ -9,8 +9,22 @@
     "test:debug": "playwright test --debug",
     "test:headed": "playwright test --headed",
     "test:first": "playwright test 01-first-test",
+    "test:orangehrm": "playwright test tests/orangehrm",
+    "test:orangehrm:auth": "playwright test tests/orangehrm/auth",
+    "test:orangehrm:login": "playwright test tests/orangehrm/auth/login.spec.ts",
+    "test:orangehrm:logout": "playwright test tests/orangehrm/auth/logout.spec.ts",
+    "test:orangehrm:data-driven": "playwright test tests/orangehrm/auth/login-data-driven.spec.ts",
+    "test:orangehrm:headed": "playwright test tests/orangehrm --headed",
+    "test:orangehrm:ui": "playwright test tests/orangehrm --ui",
+    "test:orangehrm:chromium": "playwright test tests/orangehrm --project=chromium",
+    "test:orangehrm:firefox": "playwright test tests/orangehrm --project=firefox",
+    "test:orangehrm:webkit": "playwright test tests/orangehrm --project=webkit",
+    "test:chromium": "playwright test --project=chromium",
+    "test:firefox": "playwright test --project=firefox",
+    "test:webkit": "playwright test --project=webkit",
     "report": "playwright show-report",
     "codegen": "playwright codegen",
+    "codegen:orangehrm": "playwright codegen https://opensource-demo.orangehrmlive.com/",
     "playwright:install": "playwright install",
     "playwright:update": "npm install -D @playwright/test@latest && playwright install"
   },
