Add day 2 exercise and examples

--- a/package.json
+++ b/package.json
@@ -22,9 +22,22 @@
     "test:chromium": "playwright test --project=chromium",
     "test:firefox": "playwright test --project=firefox",
     "test:webkit": "playwright test --project=webkit",
+    "demo:fixtures": "playwright test tests/examples/fixtures",
+    "demo:fixtures:basic": "playwright test tests/examples/fixtures/01-basic-structure.spec.ts",
+    "demo:fixtures:hooks": "playwright test tests/examples/fixtures/02-hooks.spec.ts",
+    "demo:fixtures:annotations": "playwright test tests/examples/fixtures/03-annotations.spec.ts",
+    "demo:fixtures:custom": "playwright test tests/examples/fixtures/04-custom-fixtures.spec.ts",
+    "demo:fixtures:composition": "playwright test tests/examples/fixtures/05-fixture-composition.spec.ts",
+    "demo:fixtures:all": "playwright test tests/examples/fixtures --project=chromium",
+    "test:saucedemo": "playwright test tests/saucedemo",
+    "test:saucedemo:headed": "playwright test tests/saucedemo --headed",
+    "test:saucedemo:ui": "playwright test tests/saucedemo --ui",
+    "test:saucedemo:debug": "playwright test tests/saucedemo --debug",
+    "test:saucedemo:chromium": "playwright test tests/saucedemo --project=chromium",
     "report": "playwright show-report",
     "codegen": "playwright codegen",
     "codegen:orangehrm": "playwright codegen https://opensource-demo.orangehrmlive.com/",
+    "codegen:saucedemo": "playwright codegen https://www.saucedemo.com",
     "playwright:install": "playwright install",
     "playwright:update": "npm install -D @playwright/test@latest && playwright install"
   },
