Add day 3 page object model content

--- a/package.json
+++ b/package.json
@@ -29,15 +29,17 @@
     "demo:fixtures:custom": "playwright test tests/examples/fixtures/04-custom-fixtures.spec.ts",
     "demo:fixtures:composition": "playwright test tests/examples/fixtures/05-fixture-composition.spec.ts",
     "demo:fixtures:all": "playwright test tests/examples/fixtures --project=chromium",
-    "test:saucedemo": "playwright test tests/saucedemo",
-    "test:saucedemo:headed": "playwright test tests/saucedemo --headed",
-    "test:saucedemo:ui": "playwright test tests/saucedemo --ui",
-    "test:saucedemo:debug": "playwright test tests/saucedemo --debug",
-    "test:saucedemo:chromium": "playwright test tests/saucedemo --project=chromium",
+    "test:saucedemo:pom": "playwright test tests/saucedemo/pom",
+    "test:saucedemo:fixtures": "playwright test tests/saucedemo/fixtures",
+    "test:saucedemo:pom:login": "playwright test tests/saucedemo/pom/login-pom.spec.ts",
+    "test:saucedemo:fixtures:login": "playwright test tests/saucedemo/fixtures/login-fixtures.spec.ts",
+    "test:saucedemo:fixtures:products": "playwright test tests/saucedemo/fixtures/products-fixtures.spec.ts",
+    "test:day3": "playwright test tests/saucedemo/pom tests/saucedemo/fixtures",
+    "test:day3:chromium": "playwright test tests/saucedemo/pom tests/saucedemo/fixtures --project=chromium",
     "report": "playwright show-report",
     "codegen": "playwright codegen",
     "codegen:orangehrm": "playwright codegen https://opensource-demo.orangehrmlive.com/",
-    "codegen:saucedemo": "playwright codegen https://www.saucedemo.com",
+    "codegen:saucedemo": "playwright codegen https://www.saucedemo.com/",
     "playwright:install": "playwright install",
     "playwright:update": "npm install -D @playwright/test@latest && playwright install"
   },
