--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   },
   "homepage": "https://github.com/pragmatictesters/playwright-advanced-training-2025#readme",
   "devDependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.10.0",
     "csv-parse": "^5.6.0"
