docs: Add homework feedback for Jayashan (Chamiya98)
- Detailed feedback document with grade A-
- Email template for sharing feedback
- Covers: folder structure, helper functions, locator strategies
- Suggestions: fix bug, add beforeEach, naming conventions
- Updated .gitignore to track feedback folder

--- a/.gitignore
+++ b/.gitignore
@@ -145,5 +145,11 @@ vite.config.ts.timestamp-*
 /playwright/.cache/
 /playwright/.auth/
 
-# Homework 
-/homework/
+# Homework submissions (ignored, but feedback is tracked)
+/homework/submissions/
+# Track feedback documents
+!/homework/feedback/
+
+# Add allure report and results 
+/allure-report/
+/allure-results/
