feat: Add MCP training server and Capstone project
- Add MCP training server for Playwright automation
  - Deterministic test data generation (generateCheckoutData)
  - Test context reset tool (resetTestContext)
  - Simple and full integration test examples
  - Comprehensive README with architecture diagram

- Add OrangeHRM Capstone Project
  - Complete project document with test cases
  - Sample tests (login, logout, add-employee)
  - GitHub Actions CI/CD workflow
  - Allure reports integration

- Add trainee homework feedback (Day 3 & Day 4)
- Add helper classes (Faker, Regex examples)
- Add test plans and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -147,6 +147,7 @@ vite.config.ts.timestamp-*
 
 # Homework submissions (ignored, but feedback is tracked)
 /homework/submissions/
+/homework/deepika-day3/
 # Track feedback documents
 !/homework/feedback/
 
