--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "playwright:install": "playwright install",
     "playwright:update": "npm install -D @playwright/test@latest && playwright install"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pragmatictesters/playwright-advanced-training-2025.git"
@@ -61,7 +62,6 @@
   "keywords": [],
   "author": "Janesh Kodikara",
   "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/pragmatictesters/playwright-advanced-training-2025/issues"
   },
@@ -72,5 +72,10 @@
     "@types/node": "^24.10.0",
     "allure-playwright": "^3.4.2",
     "csv-parse": "^5.6.0"
+  },
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.24.3",
+    "mailosaur": "^9.0.0",
+    "playwright": "^1.57.0"
   }
 }
