--- a/.github/workflows/playwright-allure.yml
+++ b/.github/workflows/playwright-allure.yml
@@ -56,29 +56,6 @@ jobs:
         run: npx playwright install --with-deps chromium
 
       # ─────────────────────────────────────────────────────────────────────────
-      # 📜 HISTORY: Download previous Allure history for trends
-      # ─────────────────────────────────────────────────────────────────────────
-      - name: 📜 Download previous Allure history
-        uses: actions/checkout@v4
-        if: always()
-        continue-on-error: true
-        with:
-          ref: gh-pages
-          path: gh-pages
-
-      - name: 📂 Copy previous history
-        if: always()
-        continue-on-error: true
-        run: |
-          mkdir -p allure-results/history
-          if [ -d "gh-pages/history" ]; then
-            cp -r gh-pages/history/* allure-results/history/ || true
-            echo "✅ Previous history copied"
-          else
-            echo "ℹ️ No previous history found (first run)"
-          fi
-
-      # ─────────────────────────────────────────────────────────────────────────
       # 🧪 TEST: Run Playwright tests
       # ─────────────────────────────────────────────────────────────────────────
       - name: 🧪 Run Playwright tests
@@ -86,21 +63,28 @@ jobs:
         continue-on-error: true
 
       # ─────────────────────────────────────────────────────────────────────────
-      # 📊 REPORT: Generate Allure report
+      # 📊 REPORT: Generate Allure report using CLI
       # ─────────────────────────────────────────────────────────────────────────
-      - name: ☕ Setup Java (required for Allure)
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
+      - name: 📦 Install Allure CLI
+        run: npm install -g allure-commandline
+
+      - name: 📜 Get Allure history from gh-pages
+        continue-on-error: true
+        run: |
+          git fetch origin gh-pages --depth=1 || true
+          mkdir -p allure-history
+          git checkout origin/gh-pages -- history 2>/dev/null && mv history allure-history/history || echo "No history yet"
 
       - name: 📊 Generate Allure Report
-        uses: simple-elf/allure-report-action@v1.12
         if: always()
-        with:
-          allure_results: allure-results
-          allure_history: allure-history
-          keep_reports: 20
+        run: |
+          # Copy history to results for trend data
+          if [ -d "allure-history/history" ]; then
+            cp -r allure-history/history allure-results/history || true
+          fi
+          # Generate report
+          allure generate allure-results --clean -o allure-report
+          echo "✅ Allure report generated"
 
       # ─────────────────────────────────────────────────────────────────────────
       # 🚀 DEPLOY: Publish report to GitHub Pages
@@ -111,8 +95,8 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: allure-history
-          destination_dir: ./
+          publish_dir: allure-report
+          keep_files: false
 
       # ─────────────────────────────────────────────────────────────────────────
       # 📎 ARTIFACTS: Save reports for download
